--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
 	},
 
 	// Uncomment the next line if you want to publish any ports.
-	// "appPort": [],
+	 "appPort": [8080],
 
 	// Uncomment the next line to run commands after the container is created.
 	// "postCreateCommand": "yarn install",
@@ -23,6 +23,8 @@
 
 	// Add the IDs of extensions you want installed when the container is created in the array below.
 	"extensions": [
-		"dbaeumer.vscode-eslint"
+		"dbaeumer.vscode-eslint",
+		"octref.vetur",
+		"esbenp.prettier-vscode"
 	]
 }
